# UnitCalculator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  basicNumeric  basicNumeric.cpp  basicNumeric.h  consts.txt  consts1.py  install.sh
src/: .basicNumeric.h.swp  CMakeLists.txt  basicNumeric.cpp  basicNumeric.h  main.cpp  regextool.cpp  regextool.h  stringTool.cpp  stringTool.h
